status retrieval Correct!

--- a/static/html/results.ejs
+++ b/static/html/results.ejs
@@ -8,13 +8,14 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
       let queryId = "<%= QueryId %>"
+      let apiServer = "<%= API_Server %>"
     </script>
   </head>
 
   <body>
     <h1>Welcome on the ISLA's Fashion second hand price exctractor</h1>
     <br>
-    <h2>The scraper is running, please wait!</h2>
+    <h2 id="UserMsg">The scraper is running, please wait!</h2>
 
 
 
