--- a/static/html/results.ejs
+++ b/static/html/results.ejs
@@ -16,7 +16,7 @@
     <h1>Welcome on the ISLA's Fashion second hand price exctractor</h1>
     <br>
     <h2 id="UserMsg">The scraper is running, please wait!</h2>
-
+    <table id="resultTable"></table>
 
 
 
